# sql-query-builder

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/: chunks_metadata.json  embeddings.npy  interactions.json  llm_metrics.json  llm_metrics_export_20251207_125252.json  schema_index.faiss  table_info.json
scripts/sql/: generate_demo_bank.sql  reset_demo_bank.sql
src/: app.py  config.py
src/data_prep/: build_schema_index.py  data_prep.py
src/fireworks/: inference.py
src/search/: vector_search.py
