[project]
name = "sql-query-builder"
version = "0.1.0"
description = "A demo showcasing AI-powered SQL autocomplete"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]